scenario-3/dumps/cluster-1/02-istio-config/destinationrule.backend-c1.dr-ew-backend-backend-c1-svc-cluster-local.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  annotations:
    xcp.tetrate.io/contentHash: 79f2c2b5b54bf470508ed78e81c3234d
    xcp.tetrate.io/service: backend.backend-c1.svc.cluster.local
    xcp.tetrate.io/serviceNamespace: backend-c1
  creationTimestamp: "2026-06-01T10:50:05Z"
  generation: 1
  labels:
    istio.io/rev: global
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/service: {}
          f:xcp.tetrate.io/serviceNamespace: {}
        f:labels:
          .: {}
          f:istio.io/rev: {}
      f:spec:
        .: {}
        f:exportTo: {}
        f:host: {}
        f:trafficPolicy:
          .: {}
          f:loadBalancer:
            .: {}
            f:localityLbSetting:
              .: {}
              f:enabled: {}
              f:failoverPriority: {}
          f:outlierDetection:
            .: {}
            f:consecutiveGatewayErrors: {}
            f:maxEjectionPercent: {}
          f:tls:
            .: {}
            f:mode: {}
            f:subjectAltNames: {}
    manager: xcpd
    operation: Update
    time: "2026-06-01T10:50:05Z"
  name: dr-ew-backend-backend-c1-svc-cluster-local
  namespace: backend-c1
  resourceVersion: "1544599"
  uid: f240f936-2423-4d86-a4d7-7d36d970e466
spec:
  exportTo:
  - '*'
  host: backend.backend-c1.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      localityLbSetting:
        enabled: true
        failoverPriority:
        - topology.kubernetes.io/region
        - topology.istio.io/network
        - topology.kubernetes.io/zone
        - topology.istio.io/subzone
    outlierDetection:
      consecutiveGatewayErrors: 10
      maxEjectionPercent: 100
    tls:
      mode: ISTIO_MUTUAL
      subjectAltNames:
      - spiffe://cluster.local/ns/backend-c1/sa/backend
