scenario-3/dumps/cluster-1/02-istio-config/envoyfilter.istio-system.global-tcp-keepalive-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    xcp.tetrate.io/contentHash: 9b357fff99c4e803829740d998407280
    xcp.tetrate.io/created-by-installer: "true"
  creationTimestamp: "2026-05-20T18:18:11Z"
  generation: 1
  labels:
    install.xcp.tetrate.io/owner-kind: EdgeXcp
    install.xcp.tetrate.io/owner-name: edgexcp
    install.xcp.tetrate.io/owner-version: v1alpha1
    istio.io/rev: stable
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/created-by-installer: {}
        f:labels:
          f:install.xcp.tetrate.io/owner-kind: {}
          f:install.xcp.tetrate.io/owner-name: {}
          f:install.xcp.tetrate.io/owner-version: {}
          f:istio.io/rev: {}
        f:ownerReferences:
          k:{"uid":"cfcf19ce-e9ac-41a2-b022-94714328c98e"}: {}
      f:spec:
        f:configPatches: {}
        f:workloadSelector:
          f:labels:
            f:istio: {}
    manager: xcp-operator-manager
    operation: Apply
    time: "2026-05-20T18:18:11Z"
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-20T18:18:14Z"
  name: global-tcp-keepalive-envoy-filter
  namespace: istio-system
  ownerReferences:
  - apiVersion: install.xcp.tetrate.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: EdgeXcp
    name: edgexcp
    uid: cfcf19ce-e9ac-41a2-b022-94714328c98e
  resourceVersion: "2200"
  uid: ff95007f-b3b1-43a7-917c-b5a76d42276f
spec:
  configPatches:
  - applyTo: LISTENER
    match:
      context: GATEWAY
    patch:
      operation: MERGE
      value:
        socket_options:
        - description: enable keep-alive
          int_value: 1
          level: 1
          name: 9
          state: STATE_PREBIND
        - description: idle time before first keep-alive probe is sent
          int_value: 30
          level: 6
          name: 4
          state: STATE_PREBIND
        - description: keep-alive interval
          int_value: 30
          level: 6
          name: 5
          state: STATE_PREBIND
        - description: keep-alive probes count
          int_value: 10
          level: 6
          name: 6
          state: STATE_PREBIND
  workloadSelector:
    labels:
      istio: ingressgateway
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0133/
    level: WARNING
    type:
      code: IST0133
