scenario-3/dumps/cluster-1/02-istio-config/virtualservice.backend-c1.vs-xc-ws-0.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  annotations:
    xcp.tetrate.io/contentHash: bccb64cd6fdca3ef223d736766cf56c8
  creationTimestamp: "2026-06-01T10:50:02Z"
  generation: 1
  labels:
    istio.io/rev: global
    xcp.tetrate.io/eastWestGateway: "true"
    xcp.tetrate.io/workspace: xc-ws
  managedFields:
  - apiVersion: networking.istio.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:xcp.tetrate.io/contentHash: {}
        f:labels:
          .: {}
          f:istio.io/rev: {}
          f:xcp.tetrate.io/eastWestGateway: {}
          f:xcp.tetrate.io/workspace: {}
      f:spec:
        .: {}
        f:exportTo: {}
        f:gateways: {}
        f:hosts: {}
        f:tls: {}
    manager: xcpd
    operation: Update
    time: "2026-06-01T10:50:02Z"
  name: vs-xc-ws-0
  namespace: backend-c1
  resourceVersion: "1544575"
  uid: 1afd117e-5b94-44e1-af9f-60e8a9330fa3
spec:
  exportTo:
  - .
  gateways:
  - backend-c1/ewgen-xc-ws-0
  hosts:
  - backend.backend-c1.svc.cluster.local
  tls:
  - match:
    - port: 15443
      sniHosts:
      - backend.backend-c1.svc.cluster.local
    route:
    - destination:
        host: backend.backend-c1.svc.cluster.local
        port:
          number: 80
      weight: 100
